--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="main">
         <header>
-        <div id="front-banner">
+        <div id="robin-banner">
             <h1>American robin</h1>
         </div>
         <div id="nav">
             <ul>
                 <li>Home</li>
-                <li>Story</li>
+                <li class="my-active-link">Story</li>
                 <li>Contact</li>
             </ul>
         </div>
@@ -44,7 +44,7 @@
                 <li>The American Robin is a known carrier for the West Nile virus. The Robin is able to hold the virus longer than other species, hence spreading it to more mosquitoes! </li>
             </ul>
         </div>
-        <div id="form-contact">
+        <div>
             <h2>Contact to learn more</h2>
             <form>
                 <label class="formtext" for="name-sukh">Your name</label><br>
@@ -53,7 +53,7 @@
                 <input type="email" id="email-sukh" name="email-sukh" class="width100"><br>
                 <label class="formtext" for="message-sukh">Your message</label>
                 <textarea type="text" id="message-sukh" rows="4" name="message-sukh" class="width100"></textarea>
-                <p class="formtext">Would you like to visit the starfish</p><br>
+                <p class="formtext">Would you like to visit the American Robin</p><br>
                 <div class="radio">
                     <label for="yes-sukh">Yes</label>
                     <input type="radio" id="yes-sukh" name="like-sukh" value="Yes">
